# ms-demo

gateway/: Dockerfile  gateway.go  go.mod  go.sum
gateway/proto/: service.pb.go  service.proto  service_grpc.pb.go
services/: CMakeLists.txt  Dockerfile  service_a.cpp  service_b.cpp  service_c.cpp
